// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnableCustomFieldsOption renders a checked checkbox and a confirmation message when toggled on 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-6>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5 emotion-6 components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-3"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="emotion-7 components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-3"
          />
        </div>
      </div>
    </div>
    <p
      class="edit-post-preferences-modal__custom-fields-confirmation-message"
    >
      A page reload is required for this change. Make sure your content is saved before reloading.
    </p>
    <button
      class="components-button is-next-40px-default-size is-secondary"
      type="button"
    >
      Show & Reload Page
    </button>
  </div>
</div>
`;

exports[`EnableCustomFieldsOption renders a checked checkbox when custom fields are enabled 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-6>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5 emotion-6 components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
        >
          <span
            class="components-form-toggle is-checked"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-0"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="emotion-7 components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EnableCustomFieldsOption renders an unchecked checkbox and a confirmation message when toggled off 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-6>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5 emotion-6 components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
        >
          <span
            class="components-form-toggle"
          >
            <input
              checked=""
              class="components-form-toggle__input"
              id="inspector-toggle-control-2"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="emotion-7 components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-2"
          />
        </div>
      </div>
    </div>
    <p
      class="edit-post-preferences-modal__custom-fields-confirmation-message"
    >
      A page reload is required for this change. Make sure your content is saved before reloading.
    </p>
    <button
      class="components-button is-next-40px-default-size is-secondary"
      type="button"
    >
      Hide & Reload Page
    </button>
  </div>
</div>
`;

exports[`EnableCustomFieldsOption renders an unchecked checkbox when custom fields are disabled 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
  box-sizing: border-box;
}

.emotion-0 *,
.emotion-0 *::before,
.emotion-0 *::after {
  box-sizing: inherit;
}

.components-panel__row .emotion-2 {
  margin-bottom: inherit;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-6>* {
  min-width: 0;
}

.emotion-7 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div>
  <div
    class="preference-base-option"
  >
    <div
      class="components-base-control components-toggle-control emotion-0 emotion-1"
    >
      <div
        class="components-base-control__field emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5 emotion-6 components-flex components-h-stack"
          data-wp-c16t="true"
          data-wp-component="HStack"
        >
          <span
            class="components-form-toggle"
          >
            <input
              class="components-form-toggle__input"
              id="inspector-toggle-control-1"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="emotion-7 components-flex-item components-flex-block components-toggle-control__label"
            data-wp-c16t="true"
            data-wp-component="FlexBlock"
            for="inspector-toggle-control-1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
